js/js.translator/testData/incremental/invalidation/toplevelProperties/lib1/l1.7.kt
konst globalVal = 4

inline konst inlineGlobalVal: Int
    get() = 3

var globalVar = "1"
